fix: dark mode

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,12 +6,6 @@
   --border-radius: 12px;
   --header-height: 70px;
   --app-width: 1280px;
-
-  /* Colors */
-  --background-color: 245, 222, 179;
-  --foreground-color: 0, 0, 0;
-  --foreground-color-secondary: 128, 0, 128;
-  --foreground-color-third: 245, 222, 179;
 }
 
 * {
